Fix random URL to use relative path, fix nav button sizing with align-items

--- a/recipes/style.css
+++ b/recipes/style.css
@@ -30,8 +30,9 @@ body, input {
 }
 
 #head {
-    align-content: flex-start; 
-    display: flex; 
+    align-content: flex-start;
+    align-items: flex-start;
+    display: flex;
     flex-flow: row wrap;
     margin-left: 0.8rem;
 }
